UAT_AllStar_8Jan2024_0636/Backup-Source/objects/IDN_Charge_Back_Hospital_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>IF( ISNULL(Contract__r.Phoenix_Customer__r.AccountNumber), NULL, Contract__r.Phoenix_Customer__r.AccountNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IDN Charge Back Hospital Summarys</relationshipLabel>
        <relationshipName>IDN_Charge_Back_Hospital_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Number__c</fullName>
        <label>CR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child1_Firm_Type__c</fullName>
        <label>Child1 Firm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child1_Name__c</fullName>
        <label>Child1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child1__c</fullName>
        <label>Child1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child2_Firm_Type__c</fullName>
        <label>Child2 Firm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child2_Name__c</fullName>
        <label>Child2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_2__c</fullName>
        <label>Child 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_date__c</fullName>
        <label>Claim date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Description__c</fullName>
        <label>Contact Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Sales_Indirect_Price__c</fullName>
        <label>Contract Sales Indirect Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>IDN Charge Back Hospital Summarys</relationshipLabel>
        <relationshipName>IDN_Charge_Back_Hospital_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dea_Number__c</fullName>
        <label>Dea Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Memo_Date__c</fullName>
        <label>Debit Memo Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Memo_Number__c</fullName>
        <label>Debit Memo Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IDN Charge Back Hospital Summarys (Account)</relationshipLabel>
        <relationshipName>IDN_Charge_Back_Hospital_Summarys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>H1_Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_CR_Number__c</fullName>
        <label>CR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Child1_Firm_Type__c</fullName>
        <label>Child1 Firm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Child1_Name__c</fullName>
        <label>Child1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Child1__c</fullName>
        <label>Child1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Child2_Firm_Type__c</fullName>
        <label>Child2 Firm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Child2_Name__c</fullName>
        <label>Child2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Child_2__c</fullName>
        <label>Child 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Claim_date__c</fullName>
        <label>Claim date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>H1_Contact_Description__c</fullName>
        <label>Contact Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Contract_Sales_Indirect_Price__c</fullName>
        <label>Contract Sales Indirect Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H1_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>IDN Charge Back Hospital Summarys (Contract)</relationshipLabel>
        <relationshipName>IDN_Charge_Back_Hospital_Summarys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>H1_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Dea_Number__c</fullName>
        <label>Dea Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Debit_Memo_Date__c</fullName>
        <label>Debit Memo Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Debit_Memo_Number__c</fullName>
        <label>Debit Memo Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Hospital_Id__c</fullName>
        <label>Hospital Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Hospital_Name__c</fullName>
        <label>Hospital Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Level__c</fullName>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Material_Number__c</fullName>
        <label>Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Member_Dea__c</fullName>
        <label>Member Dea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Member_Name__c</fullName>
        <label>Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Member_Number__c</fullName>
        <label>Member Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Member_State__c</fullName>
        <label>Member State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Member_Street__c</fullName>
        <label>Member Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Month_Year__c</fullName>
        <label>Month_Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_NDC_Code__c</fullName>
        <label>NDC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Paid_Chargeback_Amount__c</fullName>
        <label>Paid Chargeback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H1_Parent_Firm_Type__c</fullName>
        <label>Parent Firm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>IDN Charge Back Hospital Summarys (Product)</relationshipLabel>
        <relationshipName>IDN_Charge_Back_Hospital_Summarys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>H1_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Rep_Dtls_Rep__c</fullName>
        <label>Rep Dtls Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Sales_Rep_Territory__c</fullName>
        <label>Sales Rep Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Settlement_Number__c</fullName>
        <label>Settlement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Settlement_Paid_Date__c</fullName>
        <label>Settlement Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>H1_Settlement_Week__c</fullName>
        <label>Settlement Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>H1_Sold_to_Name__c</fullName>
        <label>Sold to Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Sold_to_Number__c</fullName>
        <label>Sold to Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Submitter_Name__c</fullName>
        <label>Submitter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Submitter_Number__c</fullName>
        <label>Submitter Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Tab_Reference__c</fullName>
        <label>Tab Reference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HPC</fullName>
                </value>
                <value>
                    <fullName>HCP</fullName>
                </value>
                <value>
                    <fullName>CHP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>H1_Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Vision_Test_Unique_Identifier__c</fullName>
        <label>Batch Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Vision_Unique_Identifier__c</fullName>
        <formula>contact_id__c+&apos;-&apos;+ Text(Settlement_Paid_Date__c)+&apos;-&apos;+ Text(invoice_date__c)+&apos;-&apos;+ invoice_number__c+&apos;-&apos;+ Material_Number__c +&apos;-&apos;+ text(contract_units_paid_qty__c) +&apos;-&apos;+Text(Contract_Sales_Indirect_Price__c) +&apos;-&apos;+ text(Paid_Chargeback_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vision Unique Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Zip_Dtls_Rep__c</fullName>
        <label>Zip Dtls Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_contact_external_id__c</fullName>
        <label>Contact External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_contact_id__c</fullName>
        <label>Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_contract_units_paid_qty__c</fullName>
        <label>Contract Units Paid Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>H1_customer_segment__c</fullName>
        <label>Customer Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_fiscal_quarter__c</fullName>
        <label>Fiscal_quarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_invoice_date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>H1_invoice_number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_material_alias__c</fullName>
        <label>Material Alias</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>H1_material_description__c</fullName>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_member_city__c</fullName>
        <label>Member City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_member_postal_code__c</fullName>
        <label>Member Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_product_segment__c</fullName>
        <label>Product Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_revised_product_family__c</fullName>
        <label>Revised Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_year_month__c</fullName>
        <label>Year Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Id__c</fullName>
        <label>Hospital Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Name__c</fullName>
        <label>Hospital Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <label>Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Dea__c</fullName>
        <label>Member Dea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <label>Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Number__c</fullName>
        <label>Member Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_State__c</fullName>
        <label>Member State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Street__c</fullName>
        <label>Member Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Year__c</fullName>
        <label>Month_Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDC_Code__c</fullName>
        <label>NDC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Chargeback_Amount__c</fullName>
        <label>Paid Chargeback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Firm_Type__c</fullName>
        <label>Parent Firm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>IDN Charge Back Hospital Summarys</relationshipLabel>
        <relationshipName>IDN_Charge_Back_Hospital_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Dtls_Rep__c</fullName>
        <label>Rep Dtls Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Territory__c</fullName>
        <label>Sales Rep Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settlement_Number__c</fullName>
        <label>Settlement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settlement_Paid_Date__c</fullName>
        <label>Settlement Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Settlement_Week__c</fullName>
        <label>Settlement Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_to_Name__c</fullName>
        <label>Sold to Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Number__c</fullName>
        <label>Sold to Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_Name__c</fullName>
        <label>Submitter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_Number__c</fullName>
        <label>Submitter Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>T2 Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IDN Charge Back Hospital Summarys (T2 Account)</relationshipLabel>
        <relationshipName>IDN_Charge_Back_Hospital_Summarys2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T2_Address__c</fullName>
        <label>T2 Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_CR_Number__c</fullName>
        <label>T2 CR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Category__c</fullName>
        <label>T2 Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Child1_Firm_Type__c</fullName>
        <label>T2 Child1 Firm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Child1_Name__c</fullName>
        <label>T2 Child1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Child1__c</fullName>
        <label>T2 Child1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Child2_Firm_Type__c</fullName>
        <label>T2 Child2 Firm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Child2_Name__c</fullName>
        <label>T2 Child2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Child_2__c</fullName>
        <label>T2 Child 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Claim_date__c</fullName>
        <label>T2 Claim date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Contact_Description__c</fullName>
        <label>T2 Contact Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Contract_Sales_Indirect_Price__c</fullName>
        <label>T2 Contract Sales Indirect Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T2_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>T2 Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>IDN Charge Back Hospital Summarys</relationshipLabel>
        <relationshipName>IDN_Charge_Back_Hospital_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T2_Customer_Name__c</fullName>
        <label>T2 Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Dea_Number__c</fullName>
        <label>T2 Dea Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Debit_Memo_Date__c</fullName>
        <label>T2 Debit Memo Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Debit_Memo_Number__c</fullName>
        <label>T2 Debit Memo Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Hospital_Id__c</fullName>
        <label>T2 Hospital Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Hospital_Name__c</fullName>
        <label>T2 Hospital Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Material_Number__c</fullName>
        <label>T2 Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Member_Dea__c</fullName>
        <label>T2 Member Dea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Member_Name__c</fullName>
        <label>T2 Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Member_Number__c</fullName>
        <label>T2 Member Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Member_State__c</fullName>
        <label>T2 Member State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Member_Street__c</fullName>
        <label>T2 Member Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Month_Year__c</fullName>
        <label>T2 Month_Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_NDC_Code__c</fullName>
        <label>T2 NDC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Paid_Chargeback_Amount__c</fullName>
        <label>T2 Paid Chargeback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T2_Parent_Firm_Type__c</fullName>
        <label>T2 Parent Firm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>T2 Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>IDN Charge Back Hospital Summarys (T2 Product)</relationshipLabel>
        <relationshipName>IDN_Charge_Back_Hospital_Summarys2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T2_Region__c</fullName>
        <label>T2 Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Rep_Dtls_Rep__c</fullName>
        <label>T2 Rep Dtls Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Sales_Rep_Territory__c</fullName>
        <label>T2 Sales Rep Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Settlement_Number__c</fullName>
        <label>T2 Settlement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Settlement_Paid_Date__c</fullName>
        <label>T2 Settlement Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T2_Settlement_Week__c</fullName>
        <label>T2 Settlement Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T2_Sold_to_Name__c</fullName>
        <label>T2 Sold to Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Sold_to_Number__c</fullName>
        <label>T2 Sold to Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Submitter_Name__c</fullName>
        <label>T2 Submitter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Submitter_Number__c</fullName>
        <label>T2 Submitter Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Vision_Test_Unique_Identifier__c</fullName>
        <label>T2 Batch Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Year_Month__c</fullName>
        <label>T2 Year Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Zip_Dtls_Rep__c</fullName>
        <label>T2 Zip Dtls Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_contact_external_id__c</fullName>
        <label>T2 Contact External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_contact_id__c</fullName>
        <label>T2 Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_contract_units_paid_qty__c</fullName>
        <label>T2 Contract Units Paid Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T2_customer_segment__c</fullName>
        <label>T2 Customer Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_fiscal_quarter__c</fullName>
        <label>T2 Fiscal quarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_invoice_date__c</fullName>
        <label>T2 Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T2_invoice_number__c</fullName>
        <label>T2 Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_material_alias__c</fullName>
        <label>T2 Material Alias</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>T2_material_description__c</fullName>
        <label>T2 Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_member_city__c</fullName>
        <label>T2 Member City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_member_postal_code__c</fullName>
        <label>T2 Member Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_product_segment__c</fullName>
        <label>T2 Product Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_revised_product_family__c</fullName>
        <label>T2 Revised Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Test_Unique_Identifier__c</fullName>
        <label>Batch Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <formula>contact_id__c+&apos;-&apos;+ Text(Settlement_Paid_Date__c)+&apos;-&apos;+ Text(invoice_date__c)+&apos;-&apos;+ invoice_number__c+&apos;-&apos;+ Material_Number__c +&apos;-&apos;+ text(contract_units_paid_qty__c) +&apos;-&apos;+Text(Contract_Sales_Indirect_Price__c) +&apos;-&apos;+ text(Paid_Chargeback_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vision Unique Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Month__c</fullName>
        <label>Year Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Dtls_Rep__c</fullName>
        <label>Zip Dtls Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_external_id__c</fullName>
        <label>Contact External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_id__c</fullName>
        <label>Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contract_units_paid_qty__c</fullName>
        <label>Contract Units Paid Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>customer_segment__c</fullName>
        <label>Customer Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fiscal_quarter__c</fullName>
        <label>Fiscal_quarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoice_date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoice_number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>material_alias__c</fullName>
        <label>Material Alias</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>material_description__c</fullName>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>member_city__c</fullName>
        <label>Member City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>member_postal_code__c</fullName>
        <label>Member Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_segment__c</fullName>
        <label>Product Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revised_product_family__c</fullName>
        <label>Revised Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IDN Charge Back Hospital Summary</label>
    <nameField>
        <displayFormat>IDN Chargeback-{0000}</displayFormat>
        <label>IDN Charge Back Hospital Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IDN Charge Back Hospital Summarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>